# xapp

./: .clang-format  .githook.sh  CMakeLists.txt  README.md  compile.sh
cmake/: GitHash.cmake  Pack.cmake  StaticAnalyzer.cmake
cmake/toolchain/: ToolchainRasp.cmake  ToolchainX64.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  xapp.cpp  xapp.h
src/proto_parser/nmea/: gga.h  gsa.h  gst.h  gsv.h  nmea_checksum.h  rmc.h
src/proto_parser/novatel/: bestgnssposa.h  bestgnssposb.h  dualantennaheadinga.h  dualantennaheadingb.h  inspvaa.h  inspvab.h  insstdevsa.h  insstdevsb.h  novatel_ascii_crc.h  novatel_binary_base.h  novatel_binary_crc.h  rawimua.h  rawimub.h
tests/regression/: CMakeLists.txt  main.cpp
tests/unittest/: CMakeLists.txt  Makefile  binary_test_utils.h  main.cpp.bak  run_tests.sh  test_bestgnssposa.cpp  test_bestgnssposb.cpp  test_dualantennaheadinga.cpp  test_dualantennaheadingb.cpp  test_gga.cpp  test_gsa.cpp  test_gst.cpp  test_gsv.cpp  test_inspvaa.cpp  test_inspvab.cpp  test_insstdevsa.cpp  test_insstdevsb.cpp  test_main.cpp  test_rawimua.cpp  test_rawimub.cpp  test_rmc.cpp  test_utils.h
tools/: cppcheck.sh  cppcheck.xslt
